fixing up sass warnings, fixing card issue on mobile, heading padding

--- a/assets/styles/components/_forms.scss
+++ b/assets/styles/components/_forms.scss
@@ -16,21 +16,6 @@ label:empty {
 // div.time-picker li { cursor: pointer; height: 10px; font: 12px/1 Helvetica, Arial, sans-serif; padding: 4px 3px; }
 // div.time-picker li.selected { background: #0063CE; color: #fff; }
 
-// Search form
-.search-form {
-  @extend .form-inline;
-}
-.search-form label {
-  font-weight: normal;
-  @extend .form-group;
-}
-.search-form .search-field {
-  @extend .form-control;
-}
-.search-form .search-submit {
-  @extend .btn;
-  @extend .btn-default;
-}
 
 #proud-teaser-filter {
   @include card();
